<resources>
    <string name="app_name">UberApp_Tim18</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="departure">Departure</string>
    <string name="destination">Destination</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_password">Confirm password</string>
    <string name="account">Account</string>
    <string name="inbox">Inbox</string>
    <string name="welcome">Welcome!</string>
    <string name="toggle_on">Online</string>
    <string name="toggle_off">Offline</string>
    <string name="toggle_text">ToggleButton</string>
    <string name="register">REGISTER</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">"Don't have an account? Sign up"</string>
    <string name="smart_car">Smart car</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="ride_history">Ride history</string>
    <string name="acc_info">My info:</string>
    <string name="edit_data">EDIT PROFILE</string>
    <string name="ride_info">Ride information:</string>
    <string name="beginning">Beginning</string>
    <string name="end">End</string>
    <string name="price">Price</string>
    <string name="duration">Duration [min]</string>
    <string name="ride_panic">Activated panic</string>
    <string name="ride_baby">Baby in the car</string>
    <string name="ride_pet">Pets in the car</string>
    <string name="ride_split_fair">Split fair</string>
    <string name="message_info">Message detail:</string>
    <string name="from">From:</string>
    <string name="type">Type of message:</string>
    <string name="date">Date sent:</string>
    <string name="message">Message:</string>
    <string name="profile_picture">Profile picture</string>
    <string name="type_message">Type message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="search">Search</string>
    <string name="setting">Settings</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="add_item">Add</string>
    <string name="edit_item">Edit</string>
    <string name="remove_item">Remove</string>
    <string name="save_item">Save</string>
    <string name="cancel_item">Cancel</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="places">Places</string>
    <string name="error">Error</string>
    <string name="set_as_main">Set as main</string>
    <string name="notifications">Notifications</string>
    <string name="sync_data">Sync data</string>
    <string name="home_long">Map</string>
    <string name="places_long">Places to review</string>
    <string name="preferences_long">Change your preferences</string>
    <string name="about_long">Get to know about us</string>
    <string name="sync_data_long">Sync data from the repo</string>
    <string name="location_disabled_message">Your Locations seems to be disabled, do you want to enable it?</string>
    <string name="oops">Ooops</string>
    <string name="sure">Sure</string>
    <string name="no">No</string>
    <string name="logout">Log out</string>
    <string name="view_profile">View Profile</string>
    <string name="second_activity">SECOND ACTIVITY</string>
    <string name="title_activity_detail">Detail</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_new">New</string>
    <string name="autosync_problem">Automatic Sync problem</string>
    <string name="no_internet">Bad news, no internet connection</string>
    <string name="autosync_warning">Automatic Sync warning</string>
    <string name="connect_to_wifi">Please connect to wifi to sync data</string>
    <string name="autosync">Automatic Sync</string>
    <string name="good_news_sync">Good news, everything is sync now.</string>
    <string name="new_comments">New comments</string>
    <string name="new_">New</string>
    <string name="turn_wifi_on">Turn wifi on</string>
    <string name="pref_sync_title">Allow Sync</string>
    <string name="pref_sync_summ">Allow app to sync data automatically, when wifi is avalible</string>
    <string name="pref_syncConnectionType">Sync interval</string>
    <string name="pref_radiusConnectionType">Radius lookup</string>
    <string name="pref_sync_list">pref_sync_list</string>
    <string name="pref_radius">pref_radius</string>
    <string name="pref_sync">pref_sync</string>
    <string name="notif_on_sync_key">notif_on_sync</string>
    <string name="turn_notif_on">Stop notification</string>
    <string name="yes">YES</string>
    <string name="pet_transport">Pet transport</string>
    <string name="baby_transport">Baby transport</string>
    <string name="s1_title">Start time of the ride: </string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="vehicle_type">Vehicle type:</string>
    <string name="other_options">Other options:</string>
    <string name="other_passengers">Other passengers</string>
    <string name="order">ORDER</string>
    <string name="edit_profile">Edit profile:</string>
    <string name="ID">ID:</string>
    <string name="cancel">Cancel</string>
    <string name="verify">Please verify your account with an email!</string>
    <string name="verified_button">I have verified!</string>
    <string name="model">Model</string>
    <string name="license_number">License number</string>
    <string name="passenger_seats">Passenger seats</string>
    <string name="true_text">True</string>
    <string name="false_text">False</string>
    <string name="current_ride">Current ride:</string>
    <string name="start">Start</string>
    <string name="sendEmail">SEND VERIFICATION</string>
    <string name="code">Code</string>
    <string name="passengers">Passengers:</string>
    <string name="about_ride">About ride:</string>
    <string name="skip">skip</string>
    <string name="driver_id">Driver id</string>
    <string name="driver_name">Driver name:</string>
    <string name="driver_surname">Driver Surname</string>
    <string name="choose_dates">Choose dates</string>
    <string name="to">To:</string>
    <string name="reject">REJECT!!!</string>
</resources>