<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#485162"
    >

    <PreferenceCategory 
        android:title="Auto data sync"
        android:icon="@drawable/ic_baseline_settings_24"
        android:key="sync_settings">
        
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_sync"
            android:summary="@string/pref_sync_summ"
            android:title="@string/pref_sync_title" />

        <ListPreference
            android:dependency="@string/pref_sync"
            android:dialogTitle="@string/pref_syncConnectionType"
            android:entries="@array/pref_syncConnectionTypes_entries"
            android:entryValues="@array/pref_syncConnectionTypes_values"
            android:key="@string/pref_sync_list"
            android:title="@string/pref_syncConnectionType" 
            android:summary="%s"
            android:defaultValue="1"/>
        
    </PreferenceCategory>

    <PreferenceCategory app:allowDividerAbove="true"
        android:key="dopusti_settings"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="About">

        <EditTextPreference
            android:defaultValue="default name"
            android:enabled="true"
            android:dependency="pref_name"
            android:key="pref_name"
            android:icon="@drawable/ic_baseline_launch_24"
            android:title="Application name">
        </EditTextPreference>

    </PreferenceCategory>

</PreferenceScreen>