<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/step1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#485162"
    tools:context=".RideStepper.Step2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/step1_title"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/other_options"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:layout_marginTop="100sp"
            android:padding="5dp"
            android:textColor="#EBE8D7"/>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/baby_transport_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baby_transport"
                android:textSize="23sp"
                android:layout_marginTop="10dp"
                android:textColor="#EBE8D7"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="10dp"/>
            <ToggleButton
                android:id="@+id/baby_transport_button"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/toggle_button_color"
                android:text="@string/toggle_text"
                android:textOff="@string/no"
                android:textOn="@string/yes" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pet_transport_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_transport"
                android:textSize="23sp"
                android:layout_marginTop="10dp"
                android:textColor="#EBE8D7"
                android:layout_marginEnd="65dp"
                android:layout_marginStart="10dp"/>

            <ToggleButton
                android:id="@+id/pet_transport_button"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/toggle_button_color"
                android:text="@string/toggle_text"
                android:textOff="@string/no"
                android:textOn="@string/yes" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/previous"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:text="@string/back"
                android:background="@drawable/button_back"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/next"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:text="@string/next"
                android:background="@drawable/button_shape"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                />

        </LinearLayout>




    </LinearLayout>


</LinearLayout>