<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#485162"
    tools:context=".PassengerRegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        >
        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:text="@string/smart_car"
            android:textColor="#EBE8D7"
            android:textSize="40dp"
            android:fontFamily="monospace"
            android:textStyle="bold"

            />
        <EditText
            android:id="@+id/name"
            android:layout_marginTop="40dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:textColorHint="@color/black"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:drawablePadding="35dp"
            android:padding="15dp"
            android:background="@drawable/edit_text_background"
            />
        <EditText
            android:id="@+id/surname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/surname"
            android:textColorHint="@color/black"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="10dp"
            android:drawablePadding="35dp"
            android:padding="15dp"
            android:background="@drawable/edit_text_background"
            />

        <EditText
            android:id="@+id/address"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/address"
            android:textColorHint="@color/black"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="10dp"
            android:drawablePadding="35dp"
            android:padding="15dp"
            android:background="@drawable/edit_text_background"
            />

        <EditText
            android:id="@+id/passenger_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColorHint="@color/black"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:drawablePadding="35dp"
            android:padding="15dp"
            android:background="@drawable/edit_text_background"
            />

        <EditText
            android:id="@+id/phone_num"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone"
            android:textColorHint="@color/black"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:drawablePadding="35dp"
            android:padding="15dp"
            android:background="@drawable/edit_text_background"
            />
        <EditText
            android:id="@+id/passenger_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:drawablePadding="35dp"
            android:padding="15dp"
            android:background="@drawable/edit_text_background"
            />


        <EditText
            android:id="@+id/passenger_password_confirm"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/black"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:drawablePadding="35dp"
            android:padding="15dp"
            android:background="@drawable/edit_text_background"
            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/register"
            android:background="@drawable/button_shape"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            />

    </LinearLayout>

</LinearLayout>