<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".UserLoginActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        >

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/username"
            android:textColorHint="@color/black"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:drawableLeft="@drawable/ic_person_black"
            android:drawablePadding="35dp"
            android:padding="20dp"
            android:background="@drawable/edit_text_background"
        />
        <EditText
            android:id="@+id/Password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:drawableLeft="@drawable/ic_password_black"
            android:drawablePadding="35dp"
            android:padding="20dp"
            android:background="@drawable/edit_text_background"
        />
        <TextView
            android:id="@+id/forgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="15dp"
            android:layout_marginRight="40dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold"

        />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/login"
            android:background="@drawable/button_shape"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
        />

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="15dp"

            />
    </LinearLayout>

</LinearLayout>