<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/step1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#485162"
    tools:context=".RideStepper.Step1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/step1_title"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/s1_title"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:layout_marginTop="100sp"
            android:padding="5dp"
            android:textColor="#EBE8D7"/>

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:timePickerMode="spinner"
            android:drawablePadding="35dp"
            android:textColorHint="@color/black"
            android:layout_gravity="center"
            android:padding="15dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/time_picker"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/previous"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:text="@string/back"
                android:background="@drawable/button_back"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/next"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:text="@string/next"
                android:background="@drawable/button_shape"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                />

        </LinearLayout>




    </LinearLayout>


</LinearLayout>