<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#485162"
tools:context=".fragments.ForgotPasswordCode">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="30dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/img_layout">
            <ImageView
                android:id="@+id/logo_img"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:src="@drawable/logo" />
            <EditText
                android:id="@+id/code"
                android:layout_below="@+id/logo_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/code"
                android:textColorHint="@color/black"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:drawablePadding="35dp"
                android:padding="15dp"
                android:background="@drawable/edit_text_background"
                />
            <EditText
                android:id="@+id/passenger_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/new_password"
                android:textColorHint="@color/black"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:drawablePadding="35dp"
                android:padding="15dp"
                android:background="@drawable/edit_text_background"
                />


            <EditText
                android:id="@+id/passenger_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/black"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:drawablePadding="35dp"
                android:padding="15dp"
                android:background="@drawable/edit_text_background"
                />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirmPass"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/confirm"
            android:background="@drawable/button_shape"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="10dp"
            />

    </RelativeLayout>








<!--    <androidx.appcompat.widget.AppCompatButton-->
<!--        android:id="@+id/confirm"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="60dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="40dp"-->
<!--        android:text="@string/confirm"-->
<!--        android:background="@drawable/button_shape"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20dp"-->
<!--        android:textStyle="bold"-->
<!--        />-->

<!--</LinearLayout>-->

</LinearLayout>