<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/step1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#485162"
    tools:context=".RideStepper.Step2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/step1_title"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_type"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:layout_marginTop="100sp"
            android:padding="5dp"
            android:textColor="#EBE8D7"/>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_image1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:button="@drawable/van"
                android:background="@drawable/radio_button_selector"
                />

            <RadioButton
                android:id="@+id/radio_image2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:background="@drawable/radio_button_selector"
                android:button="@drawable/car" />

            <RadioButton
                android:id="@+id/radio_image3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:background="@drawable/radio_button_selector"
                android:button="@drawable/limousine" />

        </RadioGroup>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/previous"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:text="@string/back"
                android:background="@drawable/button_back"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/next"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:text="@string/next"
                android:background="@drawable/button_shape"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                />

        </LinearLayout>




    </LinearLayout>


</LinearLayout>